--- a/privacy.html
+++ b/privacy.html
@@ -11,16 +11,17 @@
 
 <body>
   <h1>Privacy Policy for MaskTraffic</h1>
-  <p>At MaskTraffic, accessible from masktraffic.com, one of our main priorities is the privacy of our visitors. This
-    Privacy Policy document contains types of information that is collected and recorded by MaskTraffic and how we use
-    it.</p>
+  <p>At MaskTraffic, accessible from masktraffic.com or the MaskTraffic mobile app, one of our main priorities is the
+    privacy of our visitors. This
+    Privacy Policy document contains types of information that are collected and recorded by MaskTraffic and how we use
+    them.</p>
   <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact
     us.</p>
-  <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to
+  <p>This Privacy Policy applies only to visitors of our website and mobile app with regards to
     the information that they shared and/or collect in MaskTraffic. This policy is not applicable to any information
-    collected offline or via channels other than this website.</p>
+    collected offline or via channels other than the website and mobile app.</p>
   <h2>Consent</h2>
-  <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
+  <p>By using our website or mobile app, you hereby consent to our Privacy Policy and agree to its terms.</p>
   <h2>Information we collect</h2>
   <p>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be
     made clear to you at the point we ask you to provide your personal information.</p>
@@ -32,12 +33,13 @@
   <h2>How we use your information</h2>
   <p>We use the information we collect in various ways, including to:</p>
   <ul>
-    <li>Provide, operate, and maintain our website</li>
-    <li>Improve, personalize, and expand our website</li>
-    <li>Understand and analyze how you use our website</li>
+    <li>Provide, operate, and maintain our website and mobile app</li>
+    <li>Improve, personalize, and expand our website and mobile app</li>
+    <li>Understand and analyze how you use our website and mobile app</li>
     <li>Develop new products, services, features, and functionality</li>
     <li>Communicate with you, either directly or through one of our partners, including for customer service, to
-      provide you with updates and other information relating to the website, and for marketing and promotional
+      provide you with updates and other information relating to the website or mobile app, and for marketing and
+      promotional
       purposes</li>
     <li>Send you emails</li>
     <li>Find and prevent fraud</li>
