Add space to Mask Traffic name

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>MaskTraffic: COVID Reviews</title>
+  <title>Mask Traffic: Business Reviews</title>
 </head>
 
 <body>
